// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccessConsoles Empty 1`] = `
<DocumentFragment>
  <div
    class="pf-c-console"
  />
</DocumentFragment>
`;

exports[`AccessConsoles with DesktopViewer 1`] = `
<DocumentFragment>
  <div
    class="pf-c-console"
  />
</DocumentFragment>
`;

exports[`AccessConsoles with SerialConsole and VncConsole as children 1`] = `
<DocumentFragment>
  <div
    class="pf-c-console"
  >
    <div
      class="pf-c-console__actions"
    >
      <div
        class="pf-c-select"
        data-ouia-component-id="OUIA-Generated-Select-single-1"
        data-ouia-component-type="PF4/Select"
        data-ouia-safe="true"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="Options menu"
          aria-labelledby=" pf-c-console__type-selector"
          class="pf-c-select__toggle"
          id="pf-c-console__type-selector"
          type="button"
        >
          <div
            class="pf-c-select__toggle-wrapper"
          >
            <span
              class="pf-c-select__toggle-text"
            >
              Select console type
            </span>
          </div>
          <span
            class="pf-c-select__toggle-arrow"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AccessConsoles with SerialConsole as a single child 1`] = `
<DocumentFragment>
  <div
    class="pf-c-console"
  />
</DocumentFragment>
`;

exports[`AccessConsoles with VncConsole as a single child 1`] = `
<DocumentFragment>
  <div
    class="pf-c-console"
  />
</DocumentFragment>
`;

exports[`AccessConsoles with preselected SerialConsole 1`] = `
<DocumentFragment>
  <div
    class="pf-c-console"
  >
    <div
      class="pf-c-console__actions-serial"
    >
      <button
        aria-disabled="false"
        class="pf-c-button pf-m-secondary"
        data-ouia-component-id="OUIA-Generated-Button-secondary-1"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        type="button"
      >
        Disconnect
      </button>
      <button
        aria-disabled="false"
        class="pf-c-button pf-m-secondary"
        data-ouia-component-id="OUIA-Generated-Button-secondary-2"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        type="button"
      >
        Reset
      </button>
    </div>
    <div
      class="pf-c-console__serial"
    >
      <div
        class="pf-c-empty-state"
      >
        <div
          class="pf-c-empty-state__content"
        >
          <div
            class="pf-c-empty-state__icon"
          >
            <span
              aria-label="Contents"
              aria-valuetext="Loading..."
              class="pf-c-spinner pf-m-xl"
              role="progressbar"
            >
              <span
                class="pf-c-spinner__clipper"
              />
              <span
                class="pf-c-spinner__lead-ball"
              />
              <span
                class="pf-c-spinner__tail-ball"
              />
            </span>
          </div>
          <div
            class="pf-c-empty-state__body"
          >
            Loading ...
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AccessConsoles with wrapped SerialConsole as a child 1`] = `
<DocumentFragment>
  <div
    class="pf-c-console"
  >
    <p>
      Serial console text
    </p>
  </div>
</DocumentFragment>
`;
